kubernetes/blogi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blogi
  namespace: default
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    run: blogi
  type: NodePort
